fixed lint errors

--- a/src/app/core/feat-login/login2/login2.component.html
+++ b/src/app/core/feat-login/login2/login2.component.html
@@ -1,7 +1,6 @@
 <div class="py-20 px-6 md:px-12 lg:px-20 flex items-center justify-center">
   <div
-    class="max-w-xl w-full flex flex-col items-center gap-8 bg-surface-0 dark:bg-surface-900 pt-12 pb-6 px-6 rounded-3xl shadow-[0px_24px_48px_0px_rgba(0,0,0,0.04)]"
-  >
+    class="max-w-xl w-full flex flex-col items-center gap-8 bg-surface-0 dark:bg-surface-900 pt-12 pb-6 px-6 rounded-3xl shadow-[0px_24px_48px_0px_rgba(0,0,0,0.04)]">
     <div>
       <svg
         class="fill-surface-900 dark:fill-surface-0 transition-all"
@@ -9,8 +8,7 @@
         width="32"
         height="33"
         viewBox="0 0 32 33"
-        fill="none"
-      >
+        fill="none">
         <path d="M16 0.5C7.16344 0.5 0 7.66344 0 16.5C8.83656 16.5 16 9.33656 16 0.5Z" />
         <path d="M16 32.5C24.8366 32.5 32 25.3366 32 16.5C23.1634 16.5 16 23.6634 16 32.5Z" />
         <path d="M16 0.5C24.8366 0.5 32 7.66344 32 16.5C23.1634 16.5 16 9.33656 16 0.5Z" />
@@ -25,20 +23,17 @@
         pButton
         type="button"
         icon="pi pi-google"
-        class="!flex-1 !py-1 !text-xl !leading-none text-surface-900 dark:!text-surface-0 p-button-outlined p-button-secondary"
-      ></button>
+        class="!flex-1 !py-1 !text-xl !leading-none text-surface-900 dark:!text-surface-0 p-button-outlined p-button-secondary"></button>
       <button
         pButton
         type="button"
         icon="pi pi-facebook"
-        class="!flex-1 !py-1 !text-xl !leading-none text-surface-900 dark:!text-surface-0 p-button-outlined p-button-secondary"
-      ></button>
+        class="!flex-1 !py-1 !text-xl !leading-none text-surface-900 dark:!text-surface-0 p-button-outlined p-button-secondary"></button>
       <button
         pButton
         type="button"
         icon="pi pi-apple"
-        class="!flex-1 !py-1 !text-xl !leading-none text-surface-900 dark:!text-surface-0 p-button-outlined p-button-secondary"
-      ></button>
+        class="!flex-1 !py-1 !text-xl !leading-none text-surface-900 dark:!text-surface-0 p-button-outlined p-button-secondary"></button>
     </div>
 
     <div class="flex items-center gap-6 w-full">
@@ -57,8 +52,7 @@
             id="email"
             formControlName="email"
             placeholder="{{ 'core.login.email' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
         <div class="flex flex-col gap-2">
           <label for="password">{{ 'core.login.password' | translate }}</label>
@@ -68,8 +62,7 @@
             type="password"
             formControlName="password"
             placeholder="{{ 'core.login.password' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
       </div>
 
