--- a/src/app/shared/ui/form-date/form-date.component.html
+++ b/src/app/shared/ui/form-date/form-date.component.html
@@ -7,8 +7,7 @@
       dateFormat="dd.mm.yy"
       [showIcon]="true"
       [showOnFocus]="false"
-      appendTo="body"
-    />
+      appendTo="body" />
     <label [for]="id">
       {{ label | translate }}
       @if (required) {
