--- a/src/app/shared/ui/tree-table/tree-table.component.html
+++ b/src/app/shared/ui/tree-table/tree-table.component.html
@@ -15,8 +15,7 @@
   metaKeySelection="false"
   [ngClass]="customClass"
   [rowTrackBy]="rowTrackBy"
-  [showGridlines]="true"
->
+  [showGridlines]="true">
   <!--ng-template #caption>
     <div class="flex">
       <p-iconfield iconPosition="left" class="ml-auto">
@@ -98,8 +97,7 @@
               type="button"
               icon="pi pi-pencil"
               class="p-button-sm p-button-text text-emerald-500"
-              (click)="onEdit(rowData)"
-            ></button>
+              (click)="onEdit(rowData)"></button>
           } @else {
             <button pButton disabled type="button" icon="pi pi-pencil" class="p-button-sm p-button-text text-transparent"></button>
           }
@@ -109,8 +107,7 @@
               type="button"
               icon="pi pi-trash"
               class="p-button-sm p-button-text p-button-danger"
-              (click)="confirmDelete(rowData)"
-            ></button>
+              (click)="confirmDelete(rowData)"></button>
           }
         </td>
       }
