--- a/src/app/core/feat-login/register/register.component.html
+++ b/src/app/core/feat-login/register/register.component.html
@@ -10,8 +10,7 @@
 
       <button
         type="submit"
-        class="max-w-40 w-full rounded-full apearance-none border-0 p-4 outline-0 text-xl mb-6 font-medium bg-white/30 hover:bg-white/40 active:bg-white/20 text-primary-contrast/80 cursor-pointer transition-colors duration-150"
-      >
+        class="max-w-40 w-full rounded-full apearance-none border-0 p-4 outline-0 text-xl mb-6 font-medium bg-white/30 hover:bg-white/40 active:bg-white/20 text-primary-contrast/80 cursor-pointer transition-colors duration-150">
         {{ 'shared.button.register' | translate }}
       </button>
       <a class="cursor-pointer font-medium block text-center text-primary-contrast">{{ 'core.register.terms' | translate }}</a>
