--- a/src/app/core/feat-login/register2/register2.component.html
+++ b/src/app/core/feat-login/register2/register2.component.html
@@ -1,7 +1,6 @@
 <div class="py-20 px-6 md:px-12 lg:px-20 flex items-center justify-center">
   <div
-    class="max-w-xl w-full flex flex-col items-center gap-8 bg-surface-0 dark:bg-surface-900 pt-12 pb-6 px-6 rounded-3xl shadow-[0px_24px_48px_0px_rgba(0,0,0,0.04)]"
-  >
+    class="max-w-xl w-full flex flex-col items-center gap-8 bg-surface-0 dark:bg-surface-900 pt-12 pb-6 px-6 rounded-3xl shadow-[0px_24px_48px_0px_rgba(0,0,0,0.04)]">
     <div>
       <svg
         class="fill-surface-900 dark:fill-surface-0 transition-all"
@@ -9,8 +8,7 @@
         width="32"
         height="33"
         viewBox="0 0 32 33"
-        fill="none"
-      >
+        fill="none">
         <path d="M16 0.5C7.16344 0.5 0 7.66344 0 16.5C8.83656 16.5 16 9.33656 16 0.5Z" />
         <path d="M16 32.5C24.8366 32.5 32 25.3366 32 16.5C23.1634 16.5 16 23.6634 16 32.5Z" />
         <path d="M16 0.5C24.8366 0.5 32 7.66344 32 16.5C23.1634 16.5 16 9.33656 16 0.5Z" />
@@ -29,8 +27,7 @@
             id="organization"
             formControlName="organization"
             placeholder="{{ 'core.login.organization' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
         <!-- first name -->
         <div class="flex flex-col gap-2">
@@ -40,8 +37,7 @@
             id="firstname"
             formControlName="firstname"
             placeholder="{{ 'core.login.firstname' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
         <!-- last name -->
         <div class="flex flex-col gap-2">
@@ -51,8 +47,7 @@
             id="lastname"
             formControlName="lastname"
             placeholder="{{ 'core.login.lastname' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
         <!-- email -->
         <div class="flex flex-col gap-2">
@@ -62,8 +57,7 @@
             id="email"
             formControlName="email"
             placeholder="{{ 'core.login.email' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
         <!-- password -->
         <div class="flex flex-col gap-2">
@@ -74,8 +68,7 @@
             type="password"
             formControlName="password"
             placeholder="{{ 'core.login.password' | translate }}"
-            class="w-full dark:!bg-surface-900"
-          />
+            class="w-full dark:!bg-surface-900" />
         </div>
       </div>
 
