--- a/src/app/shared/ui/login-input/login-input.component.html
+++ b/src/app/shared/ui/login-input/login-input.component.html
@@ -6,6 +6,5 @@
     class="!appearance-none placeholder:!text-primary-contrast/40 !border-0 !p-4 !w-full !outline-0 !text-xl !mb-6 !bg-white/10 !text-primary-contrast/70 !rounded-full"
     type="{{ type }}"
     pInputText
-    autocomplete="{{ autocomplete }}"
-  />
+    autocomplete="{{ autocomplete }}" />
 </p-floatlabel>
