--- a/src/app/shared/ui/not-found/not-found.component.html
+++ b/src/app/shared/ui/not-found/not-found.component.html
@@ -11,8 +11,7 @@
       <img
         src="https://fqjltiegiezfetthbags.supabase.co/storage/v1/render/image/public/block.images/blocks/feedback/404-rocket.png"
         alt="Image"
-        class="w-full md:w-[28rem]"
-      />
+        class="w-full md:w-[28rem]" />
     </div>
   </div>
 </div>
