--- a/src/app/core/feat-navigation/shell/shell.component.html
+++ b/src/app/core/feat-navigation/shell/shell.component.html
@@ -1,6 +1,6 @@
 <div class="relative flex gap-2 h-screen bg-surface-50 dark:bg-surface-900 p-2">
   <!-- Sidebar -->
-  <div id="app-sidebar-15" class="h-full hidden lg:block lg:static absolute left-0 top-0 py-4 pl-4 lg:p-0 z-50">
+  <div class="h-full hidden lg:block lg:static absolute left-0 top-0 py-4 pl-4 lg:p-0 z-50" id="app-sidebar-15">
     <sf-sidebar />
   </div>
 
@@ -12,7 +12,7 @@
         <a class="cursor-pointer block lg:hidden text-surface-700 dark:text-surface-100 mr-2" (click)="toggleSidebar()">
           <i class="pi pi-bars !text-2xl"></i>
         </a>
-        <p-drawer [(visible)]="showDrawer" modal="true">
+        <p-drawer modal="true" [(visible)]="showDrawer">
           <sf-sidebar />
         </p-drawer>
 
@@ -27,25 +27,25 @@
 
       <!-- Notifications, Buttons & Avatar -->
       <div class="flex items-center gap-2">
-        <button pButton icon="pi pi-palette" class="p-button-outlined p-button-secondary text-xs" (click)="onColorChange()"></button>
+        <button class="p-button-outlined p-button-secondary text-xs" icon="pi pi-palette" pButton (click)="onColorChange()"></button>
 
         <!-- language switch -->
         @if (currentLanguage() === 'de') {
-          <button pButton class="p-button-outlined p-button-secondary text-xs" (click)="onLanguageChange()">DE</button>
+          <button class="p-button-outlined p-button-secondary text-xs" pButton (click)="onLanguageChange()">DE</button>
         } @else {
-          <button pButton class="p-button-outlined p-button-secondary text-xs" (click)="onLanguageChange()">EN</button>
+          <button class="p-button-outlined p-button-secondary text-xs" pButton (click)="onLanguageChange()">EN</button>
         }
 
         <!-- theme switch -->
         @if (currentThemeMode() === 'dark') {
-          <button pButton icon="pi pi-sun" class="p-button-outlined p-button-secondary" (click)="onThemeSwitch()"></button>
+          <button class="p-button-outlined p-button-secondary" icon="pi pi-sun" pButton (click)="onThemeSwitch()"></button>
         } @else {
-          <button pButton icon="pi pi-moon" class="p-button-outlined p-button-secondary" (click)="onThemeSwitch()"></button>
+          <button class="p-button-outlined p-button-secondary" icon="pi pi-moon" pButton (click)="onThemeSwitch()"></button>
         }
 
         <!-- profile picture -->
-        <button pButton icon="pi pi-bell" class="p-button-outlined p-button-secondary"></button>
-        <p-avatar image="profile/angular.png" size="large" shape="circle"></p-avatar>
+        <button class="p-button-outlined p-button-secondary" icon="pi pi-bell" pButton></button>
+        <p-avatar image="profile/angular.png" shape="circle" size="large" />
       </div>
     </div>
 
