--- a/src/app/core/feat-login/login/login.component.html
+++ b/src/app/core/feat-login/login/login.component.html
@@ -3,17 +3,17 @@
   <div class="p-12 shadow text-center lg:w-[30rem] backdrop-blur-md rounded-xl bg-[rgba(255,255,255,0.1)]">
     <div class="text-4xl font-medium mb-12 text-primary-contrast">{{ 'login.title' | translate }}</div>
     <form [formGroup]="loginForm" (ngSubmit)="login()">
-      <sf-login-input [control]="loginForm.controls.username" fieldName="username" />
-      <sf-login-input [control]="loginForm.controls.password" fieldName="password" type="password" />
+      <sf-login-input fieldName="username" [control]="loginForm.controls.username" />
+      <sf-login-input fieldName="password" type="password" [control]="loginForm.controls.password" />
       <button
-        type="submit"
-        class="max-w-40 w-full rounded-full appearance-none border-0 p-4 outline-0 text-xl mb-6 font-medium bg-white/30 hover:bg-white/40 active:bg-white/20 text-primary-contrast/80 cursor-pointer transition-colors duration-150">
+        class="max-w-40 w-full rounded-full appearance-none border-0 p-4 outline-0 text-xl mb-6 font-medium bg-white/30 hover:bg-white/40 active:bg-white/20 text-primary-contrast/80 cursor-pointer transition-colors duration-150"
+        type="submit">
         {{ 'shared.button.login' | translate }}
       </button>
       <div class="flex items-center justify-center gap-2">
         <a class="cursor-pointer font-medium block text-center text-primary-contrast">{{ 'core.login.forgotPassword' | translate }}</a>
         <span>|</span>
-        <a routerLink="/register" class="cursor-pointer font-medium block text-center text-primary-contrast">{{
+        <a class="cursor-pointer font-medium block text-center text-primary-contrast" routerLink="/register">{{
           'core.login.register' | translate
         }}</a>
       </div>
