--- a/src/app/core/feat-login/register/register.component.html
+++ b/src/app/core/feat-login/register/register.component.html
@@ -2,15 +2,15 @@
   <div class="p-12 shadow text-center lg:w-[30rem] backdrop-blur-md rounded-xl bg-[rgba(255,255,255,0.1)]">
     <div class="text-4xl font-medium mb-12 text-primary-contrast">{{ 'core.register.title' | translate }}</div>
     <form [formGroup]="registerForm" (ngSubmit)="register()">
-      <sf-login-input [control]="registerForm.controls.organization" fieldName="organization" />
-      <sf-login-input [control]="registerForm.controls.firstname" fieldName="firstname" />
-      <sf-login-input [control]="registerForm.controls.lastname" fieldName="lastname" />
-      <sf-login-input [control]="registerForm.controls.email" fieldName="email" />
-      <sf-login-input [control]="registerForm.controls.password" fieldName="password" type="password" />
+      <sf-login-input fieldName="organization" [control]="registerForm.controls.organization" />
+      <sf-login-input fieldName="firstname" [control]="registerForm.controls.firstname" />
+      <sf-login-input fieldName="lastname" [control]="registerForm.controls.lastname" />
+      <sf-login-input fieldName="email" [control]="registerForm.controls.email" />
+      <sf-login-input fieldName="password" type="password" [control]="registerForm.controls.password" />
 
       <button
-        type="submit"
-        class="max-w-40 w-full rounded-full apearance-none border-0 p-4 outline-0 text-xl mb-6 font-medium bg-white/30 hover:bg-white/40 active:bg-white/20 text-primary-contrast/80 cursor-pointer transition-colors duration-150">
+        class="max-w-40 w-full rounded-full apearance-none border-0 p-4 outline-0 text-xl mb-6 font-medium bg-white/30 hover:bg-white/40 active:bg-white/20 text-primary-contrast/80 cursor-pointer transition-colors duration-150"
+        type="submit">
         {{ 'shared.button.register' | translate }}
       </button>
       <a class="cursor-pointer font-medium block text-center text-primary-contrast">{{ 'core.register.terms' | translate }}</a>
