--- a/src/app/core/feat-login/register2/register2.component.html
+++ b/src/app/core/feat-login/register2/register2.component.html
@@ -4,11 +4,11 @@
     <div>
       <svg
         class="fill-surface-900 dark:fill-surface-0 transition-all"
-        xmlns="http://www.w3.org/2000/svg"
-        width="32"
+        fill="none"
         height="33"
         viewBox="0 0 32 33"
-        fill="none">
+        width="32"
+        xmlns="http://www.w3.org/2000/svg">
         <path d="M16 0.5C7.16344 0.5 0 7.66344 0 16.5C8.83656 16.5 16 9.33656 16 0.5Z" />
         <path d="M16 32.5C24.8366 32.5 32 25.3366 32 16.5C23.1634 16.5 16 23.6634 16 32.5Z" />
         <path d="M16 0.5C24.8366 0.5 32 7.66344 32 16.5C23.1634 16.5 16 9.33656 16 0.5Z" />
@@ -17,69 +17,69 @@
     </div>
     <h1 class="text-center text-3xl font-medium text-surface-900 dark:text-surface-0">{{ 'core.register.title' | translate }}</h1>
 
-    <form [formGroup]="registerForm" (ngSubmit)="register()" class="flex flex-col w-full gap-6">
+    <form class="flex flex-col w-full gap-6" [formGroup]="registerForm" (ngSubmit)="register()">
       <div class="flex flex-col gap-4 w-full">
         <!-- organization -->
         <div class="flex flex-col gap-2">
           <label for="organization">{{ 'core.login.organization' | translate }}</label>
           <input
-            pInputText
-            id="organization"
+            class="w-full dark:!bg-surface-900"
             formControlName="organization"
-            placeholder="{{ 'core.login.organization' | translate }}"
-            class="w-full dark:!bg-surface-900" />
+            id="organization"
+            pInputText
+            placeholder="{{ 'core.login.organization' | translate }}" />
         </div>
         <!-- first name -->
         <div class="flex flex-col gap-2">
           <label for="firstname">{{ 'core.login.firstname' | translate }}</label>
           <input
-            pInputText
-            id="firstname"
+            class="w-full dark:!bg-surface-900"
             formControlName="firstname"
-            placeholder="{{ 'core.login.firstname' | translate }}"
-            class="w-full dark:!bg-surface-900" />
+            id="firstname"
+            pInputText
+            placeholder="{{ 'core.login.firstname' | translate }}" />
         </div>
         <!-- last name -->
         <div class="flex flex-col gap-2">
           <label for="lastname">{{ 'core.login.lastname' | translate }}</label>
           <input
-            pInputText
-            id="lastname"
+            class="w-full dark:!bg-surface-900"
             formControlName="lastname"
-            placeholder="{{ 'core.login.lastname' | translate }}"
-            class="w-full dark:!bg-surface-900" />
+            id="lastname"
+            pInputText
+            placeholder="{{ 'core.login.lastname' | translate }}" />
         </div>
         <!-- email -->
         <div class="flex flex-col gap-2">
           <label for="email">{{ 'core.login.email' | translate }}</label>
           <input
-            pInputText
-            id="email"
+            class="w-full dark:!bg-surface-900"
             formControlName="email"
-            placeholder="{{ 'core.login.email' | translate }}"
-            class="w-full dark:!bg-surface-900" />
+            id="email"
+            pInputText
+            placeholder="{{ 'core.login.email' | translate }}" />
         </div>
         <!-- password -->
         <div class="flex flex-col gap-2">
           <label for="password">{{ 'core.login.password' | translate }}</label>
           <input
-            pInputText
-            id="password"
-            type="password"
+            class="w-full dark:!bg-surface-900"
             formControlName="password"
+            id="password"
+            pInputText
             placeholder="{{ 'core.login.password' | translate }}"
-            class="w-full dark:!bg-surface-900" />
+            type="password" />
         </div>
       </div>
 
       <!-- Submit Button -->
-      <button pButton type="submit" class="w-full">{{ 'core.register.button' | translate }}</button>
+      <button class="w-full" pButton type="submit">{{ 'core.register.button' | translate }}</button>
     </form>
 
     <!-- Login -->
     <div class="mt-2 text-surface-700 dark:text-surface-300 font-medium">
       {{ 'core.register.alreadyAccount' | translate }}
-      <a routerLink="/login" class="text-primary hover:text-primary-emphasis transition-all">{{ 'core.register.login' | translate }}</a>
+      <a class="text-primary hover:text-primary-emphasis transition-all" routerLink="/login">{{ 'core.register.login' | translate }}</a>
     </div>
   </div>
 </div>
