--- a/src/app/shared/ui/form-checkbox/form-checkbox.component.html
+++ b/src/app/shared/ui/form-checkbox/form-checkbox.component.html
@@ -1,4 +1,4 @@
 <div class="mb-4">
-  <p-checkbox [formControl]="formControl" [value]="value" [inputId]="id" />
-  <label [for]="id" class="ml-2">{{ label | translate }}</label>
+  <p-checkbox [formControl]="formControl" [inputId]="id" [value]="value" />
+  <label class="ml-2" [for]="id">{{ label | translate }}</label>
 </div>
