--- a/src/app/shared/ui/form-date/form-date.component.html
+++ b/src/app/shared/ui/form-date/form-date.component.html
@@ -1,13 +1,13 @@
 <div class="mb-4">
   <p-floatlabel class="w-full" variant="on">
     <p-datePicker
-      [id]="id"
+      appendTo="body"
       class="w-full custom-calendar"
-      [formControl]="formControl"
       dateFormat="dd.mm.yy"
+      [formControl]="formControl"
+      [id]="id"
       [showIcon]="true"
-      [showOnFocus]="false"
-      appendTo="body" />
+      [showOnFocus]="false" />
     <label [for]="id">
       {{ label | translate }}
       @if (required) {
@@ -16,6 +16,6 @@
     </label>
   </p-floatlabel>
   @if (formControl.invalid && formControl.dirty) {
-    <p-message severity="error" variant="simple" size="small">{{ getErrorMessage() | translate }}</p-message>
+    <p-message severity="error" size="small" variant="simple">{{ getErrorMessage() | translate }}</p-message>
   }
 </div>
