--- a/src/app/shared/ui/form-input/form-input.component.html
+++ b/src/app/shared/ui/form-input/form-input.component.html
@@ -1,6 +1,6 @@
 <div class="mb-4">
   <p-floatlabel class="w-full" variant="on">
-    <input pInputText [id]="id" class="w-full" [autocomplete]="autocomplete" [formControl]="formControl" />
+    <input class="w-full" pInputText [autocomplete]="autocomplete" [formControl]="formControl" [id]="id" />
     <label [for]="id">
       {{ label | translate }}
       @if (required) {
@@ -9,6 +9,6 @@
     </label>
   </p-floatlabel>
   @if (formControl.invalid && formControl.dirty) {
-    <p-message severity="error" variant="simple" size="small">{{ getErrorMessage() | translate }}</p-message>
+    <p-message severity="error" size="small" variant="simple">{{ getErrorMessage() | translate }}</p-message>
   }
 </div>
