--- a/src/app/shared/ui/form-select/form-select.component.html
+++ b/src/app/shared/ui/form-select/form-select.component.html
@@ -1,6 +1,6 @@
 <div class="mb-4">
-  <p-floatlabel variant="on" class="w-full">
-    <p-select [id]="id" class="w-full" [formControl]="formControl" [options]="options" [optionLabel]="optionLabel" appendTo="body" />
+  <p-floatlabel class="w-full" variant="on">
+    <p-select appendTo="body" class="w-full" [formControl]="formControl" [id]="id" [optionLabel]="optionLabel" [options]="options" />
     <label [for]="id">
       {{ label | translate }}
       @if (required) {
@@ -9,6 +9,6 @@
     </label>
   </p-floatlabel>
   @if (formControl.invalid && formControl.dirty) {
-    <p-message severity="error" variant="simple" size="small">{{ getErrorMessage() | translate }}</p-message>
+    <p-message severity="error" size="small" variant="simple">{{ getErrorMessage() | translate }}</p-message>
   }
 </div>
