--- a/src/app/shared/ui/form-textarea/form-textarea.component.html
+++ b/src/app/shared/ui/form-textarea/form-textarea.component.html
@@ -1,6 +1,6 @@
 <div class="mb-4">
   <p-floatlabel class="w-full" variant="on">
-    <textarea pTextarea [id]="id" class="w-full" [formControl]="formControl" [rows]="rows" [cols]="cols"></textarea>
+    <textarea class="w-full" pTextarea [cols]="cols" [formControl]="formControl" [id]="id" [rows]="rows"></textarea>
     <label [for]="id">
       {{ label | translate }}
       @if (required) {
@@ -9,6 +9,6 @@
     </label>
   </p-floatlabel>
   @if (formControl.invalid && formControl.dirty) {
-    <p-message severity="error" variant="simple" size="small">{{ getErrorMessage() | translate }}</p-message>
+    <p-message severity="error" size="small" variant="simple">{{ getErrorMessage() | translate }}</p-message>
   }
 </div>
