--- a/src/app/shared/ui/login-input/login-input.component.html
+++ b/src/app/shared/ui/login-input/login-input.component.html
@@ -1,10 +1,10 @@
 <p-floatlabel variant="on">
   <input
-    id="{{ id }}"
-    [formControl]="control"
-    placeholder="{{ placeholder | translate }}"
+    autocomplete="{{ autocomplete }}"
     class="!appearance-none placeholder:!text-primary-contrast/40 !border-0 !p-4 !w-full !outline-0 !text-xl !mb-6 !bg-white/10 !text-primary-contrast/70 !rounded-full"
-    type="{{ type }}"
+    id="{{ id }}"
     pInputText
-    autocomplete="{{ autocomplete }}" />
+    placeholder="{{ placeholder | translate }}"
+    type="{{ type }}"
+    [formControl]="control" />
 </p-floatlabel>
