--- a/src/app/shared/ui/not-found/not-found.component.html
+++ b/src/app/shared/ui/not-found/not-found.component.html
@@ -5,13 +5,13 @@
         {{ 'core.notFound.title' | translate }}
       </div>
       <p class="text-surface-700 dark:text-surface-100 text-3xl mt-0 mb-12">{{ 'core.notFound.message' | translate }}</p>
-      <button type="button" outlined routerLink="/dashboard">{{ 'core.notFound.backButton' | translate }}</button>
+      <button outlined routerLink="/dashboard" type="button">{{ 'core.notFound.backButton' | translate }}</button>
     </div>
     <div>
       <img
-        src="https://fqjltiegiezfetthbags.supabase.co/storage/v1/render/image/public/block.images/blocks/feedback/404-rocket.png"
         alt="Image"
-        class="w-full md:w-[28rem]" />
+        class="w-full md:w-[28rem]"
+        src="https://fqjltiegiezfetthbags.supabase.co/storage/v1/render/image/public/block.images/blocks/feedback/404-rocket.png" />
     </div>
   </div>
 </div>
