--- a/src/app/shared/ui/table/table.component.html
+++ b/src/app/shared/ui/table/table.component.html
@@ -1,23 +1,23 @@
 <p-table
   #dt2
   dataKey="id"
+  metaKeySelection="false"
+  selectionMode="single"
   stripedRows
-  [value]="data"
   [columns]="columns"
-  [resizableColumns]="true"
-  [tableStyle]="{ 'min-width': '50rem' }"
+  [currentPageReportTemplate]="currentPageReportTemplate"
+  [ngClass]="customClass"
   [paginator]="true"
+  [resizableColumns]="true"
   [rows]="10"
   [rowsPerPageOptions]="[10, 20, 50]"
   [showCurrentPageReport]="true"
-  [currentPageReportTemplate]="currentPageReportTemplate"
-  selectionMode="single"
+  [showGridlines]="true"
+  [tableStyle]="{ 'min-width': '50rem' }"
+  [value]="data"
   [(selection)]="selectedData"
-  (onRowSelect)="onRowSelect($event)"
   (onRowReorder)="onRowReorder($event)"
-  metaKeySelection="false"
-  [ngClass]="customClass"
-  [showGridlines]="true">
+  (onRowSelect)="onRowSelect($event)">
   <!--ng-template #caption>
     <div class="flex">
       <p-iconfield iconPosition="left" class="ml-auto">
@@ -52,8 +52,8 @@
     </tr>
   </ng-template>
 
-  <ng-template #body let-rowData let-columns="columns" let-index="rowIndex">
-    <tr [pSelectableRow]="rowData" [pReorderableRow]="index">
+  <ng-template #body let-columns="columns" let-index="rowIndex" let-rowData>
+    <tr [pReorderableRow]="index" [pSelectableRow]="rowData">
       @if (reorder) {
         <td>
           <span class="pi pi-bars" pReorderableRowHandle></span>
@@ -69,7 +69,7 @@
         } @else if (col.type === 'icon') {
           <td><i [class]="getIcon(rowData[col.field])"></i></td>
         } @else if (col.type === 'boolean') {
-          <td class="text-center"><p-checkbox [binary]="true" [ngModel]="rowData[col.field]" disabled /></td>
+          <td class="text-center"><p-checkbox disabled [binary]="true" [ngModel]="rowData[col.field]" /></td>
         } @else {
           <td>{{ rowData[col.field] }}</td>
         }
@@ -78,18 +78,18 @@
         <td class="text-center">
           @if (showEdit) {
             <button
+              class="p-button-sm p-button-text text-emerald-500"
+              icon="pi pi-pencil"
               pButton
               type="button"
-              icon="pi pi-pencil"
-              class="p-button-sm p-button-text text-emerald-500"
               (click)="onEdit(rowData)"></button>
           }
           @if (showDelete) {
             <button
+              class="p-button-sm p-button-text p-button-danger"
+              icon="pi pi-trash"
               pButton
               type="button"
-              icon="pi pi-trash"
-              class="p-button-sm p-button-text p-button-danger"
               (click)="confirmDelete(rowData)"></button>
           }
         </td>
