--- a/src/app/shared/ui/toolbar/toolbar.component.html
+++ b/src/app/shared/ui/toolbar/toolbar.component.html
@@ -1,13 +1,13 @@
 <p-toolbar class="mb-4" styleClass="border-0 p-0 shadow-none">
   <div class="w-full flex justify-end">
     @if (showAdd) {
-      <p-button icon="pi pi-plus" class="mr-2" text severity="secondary" (click)="onAdd()" />
+      <p-button class="mr-2" icon="pi pi-plus" severity="secondary" text (click)="onAdd()" />
     }
     @if (showPrint) {
-      <p-button icon="pi pi-print" class="mr-2" text severity="secondary" />
+      <p-button class="mr-2" icon="pi pi-print" severity="secondary" text />
     }
     @if (showUpload) {
-      <p-button icon="pi pi-upload" text severity="secondary" />
+      <p-button icon="pi pi-upload" severity="secondary" text />
     }
   </div>
 </p-toolbar>
